[package]
name = "pingultra"
version = "0.1.0"
edition = "2021"
authors = ["pingultra developers"]
description = "A fast ping utility implemented in Rust"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
pnet = "0.34.0"
socket2 = "0.5.5"
rand = "0.8.5"
anyhow = "1.0.75"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
ctrlc = "3.4.1"
chrono = { version = "0.4.31", features = ["serde"] }
colored = "2.0.4"
ipnetwork = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.2"
futures = "0.3"
crossterm = "0.27.0"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
